// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correclty 1`] = `
<div>
  <div
    class="undefined undefined"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-testid="avatar"
    >
      <span
        data-name="name"
        data-testid="avatar-name"
      >
        D
        B
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar renders with background color 1`] = `
<div>
  <div
    class="undefined undefined"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-ww4vf0-MuiAvatar-root"
      data-name="avatar"
      data-testid="avatar"
    >
      <span
        data-name="name"
        data-testid="avatar-name"
      >
        D
        B
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar renders with stile primary 1`] = `
<div>
  <div
    class="undefined primary"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-stile="primary"
      data-testid="avatar"
    >
      <span
        data-name="name"
        data-testid="avatar-name"
      >
        D
        B
      </span>
    </div>
  </div>
</div>
`;
